vlib/v/checker/tests/cast_string_to_int_err.vv
fn main(){
	_ := int('456')
	_ := i8('11')
	_ := i16('111')
	_ := i64('234')
	_ := f32('2.22')
	_ := f64('2.33333')
	_ := u16('234')
	_ := u32('2')
	_ := u64('22')
}
